2006-04-16 Mikhail Khodjaiants
	Bug 113107: Make trace logs more readily available.
	* MIUIMessages.properties
	* StandardGDBDebuggerPage.java

2006-04-13 Mikhail Khodjaiants
	Bug 113107: Make trace logs more readily available.
	Implementation of the "Verbose Mode" action.
	* MANIFEST.MF
	* plugin.properties
	* plugin.xml
	+ VerboseModeActionDelegate.java
	+ icons/obj16/verbose_mode_co.gif

2006-04-11 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	Sort the shared library list.
	* SolibSearchPathBlock.java

2006-04-11 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	Use set instead of list when collecting the shared library names: different libraries can have same soname.
	* SolibSearchPathBlock.java

2006-04-11 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	Use soname instead of shared library name.
	* SolibSearchPathBlock.java

2006-04-10 Mikhail Khodjaiants
	Bug 119740: allow to specify only a subset of shared objects that we want symbols to be loaded for.
	* MANIFEST.MF
	* GDBDebuggerPage.java
	* MIUIMessages.properties
	* SolibSearchPathBlock.java
	* StandardGDBDebuggerPage.java
	- IPathProvider.java
	* MIUIUtils.java

2006-03-31 Mikhail Khodjaiants
	Replaced internal org.eclipse.cdt.debug.internal.ui.SWTUtil class.
	+ SWTUtil.java
	* ListDialogField.java
	* SelectionButtonDialogField.java
	* StringButtonDialogField.java

2006-03-01 Mikhail Khodjaiants
	Select the first available command factory when a new launch configuration is created.
	* StandardGDBDebuggerPage.java

2006-02-08 Mikhail Khodjaiants
	Bug 114793: Add an extension point to contribute command factories.
	GDBServerDebuggerPage should extend StandardGDBDebuggerPage.
	* GDBServerDebuggerPage.java
	
2006-02-06 Mikhail Khodjaiants