@@ -7,6 +7,8 @@
  *
  * Contributors:
  *     QNX Software Systems - Initial API and implementation
+ *     Vadimir Prus (vladimir@codesourcery.com) - bug 156114: GDB options layout 
+ *     problem
  *******************************************************************************/
 package org.eclipse.cdt.debug.mi.internal.ui;
 
@@ -15,6 +17,7 @@ import java.util.Arrays;
 import java.util.Comparator;
 import java.util.Observable;
 import java.util.Observer;
+
 import org.eclipse.cdt.debug.mi.core.IMILaunchConfigurationConstants;
 import org.eclipse.cdt.debug.mi.core.MIPlugin;
 import org.eclipse.cdt.debug.mi.core.command.factories.CommandFactoryDescriptor;
@@ -36,6 +39,7 @@ import org.eclipse.swt.layout.GridLayout;
 import org.eclipse.swt.widgets.Button;
 import org.eclipse.swt.widgets.Combo;
 import org.eclipse.swt.widgets.Composite;
+import org.eclipse.swt.widgets.Control;
 import org.eclipse.swt.widgets.FileDialog;
 import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.widgets.Shell;
@@ -168,6 +172,11 @@ public class StandardGDBDebuggerPage extends AbstractCDebuggerPage implements Ob
 			// use default
 		}
 		fVerboseModeButton.setSelection( verboseMode );
+		
+		// We've populated combos, which affects their preferred size, and so must relayout things.
+		Control changed[] = { fCommandFactoryCombo, fProtocolCombo };
+		((Composite) getControl()).layout( changed );
+
 		setInitializing( false ); 
 	}
 
