@@ -1,3 +1,8 @@
+2006-09-11 Mikhail Khodjaiants
+	Bug 156114: GDB options layout problem.
+	Applied patch from Vladimir Prus (vladimir@codesourcery.com).
+	* StandardGDBDebuggerPage.java
+
 2006-04-16 Mikhail Khodjaiants
 	Bug 113107: Make trace logs more readily available.
 	* MIUIMessages.properties
